<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_popup_sync"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_add_producto"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="200"
        android:title="@string/action_add_producto"
        android:visible="false"
        app:showAsAction="never" />
        
    <item
        android:id="@+id/action_add_mesa"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="250"
        android:title="@string/action_add_mesa"
        android:visible="false"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_historial_cuentas"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:orderInCategory="275"
        android:title="Historial de Cuentas"
        android:visible="false"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_logout"
        android:orderInCategory="300"
        android:title="@string/action_logout"
        app:showAsAction="never" />
    
</menu> 